# Modular_Arithmetic_Library

./: .gitignore  CMakeLists.txt  Makefile  ModularArithmetic.h  README.md  main.c
Modular_Arithmetic/: EquationModulo.c  MatrixModulo.c  Operation.c  OperationModulo.c  TestModulo.c  UtilityModulo.c
Modular_Arithmetic/Utility/: Matrix.h
Modular_Arithmetic/Utility/Matrix/: ManageMatrix.c  MatrixOperation.c  MatrixType.c  UtilityMatrix.c
